FTBFS: swscale

  CC       codec/avcodec/libswscale_plugin_la-chroma.lo
In file included from ../../modules/codec/avcodec/avcommon.h:37,
                 from ../../modules/codec/avcodec/chroma.c:33:
../../modules/codec/avcodec/avcommon_compat.h:29:10: fatal error: libavcodec/avcodec.h: No such file or directory
   29 | #include <libavcodec/avcodec.h>
      |          ^~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
make[4]: *** [Makefile:28998: codec/avcodec/libswscale_plugin_la-chroma.lo] Error 1

swscale depends on libavutil, not libavcodec...