swscale: fix compilation without avcodec

Fixes #26678.